# calorie-intake

./: README.md
backend/: Cargo.toml  README.md  create-jwt.sh  run.sh
backend/src/: api_client.rs  app_context.rs  config.rs  lib.rs
backend/src/api/: food.rs  mod.rs  router.rs  status.rs  userinfo.rs
backend/src/api/helpers/: error_conversion.rs  error_message.rs  mod.rs  query_params.rs
backend/src/functional_tests/: food_admin.rs  food_regular_user.rs  hello.rs  mod.rs  userinfo.rs
backend/src/functional_tests/test_utils/: assert_food.rs  mod.rs  runtime_config.rs
backend/src/hyper_helpers/: empty_message.rs  error_response.rs  message.rs  mod.rs  response.rs  server.rs
backend/src/services/: diet_authorization.rs  food_storage.rs  in_memory_food_storage.rs  in_memory_userinfo_storage.rs  mod.rs  userinfo_storage.rs
backend/src/utils/: jwt_manager.rs  logging.rs  mod.rs  time.rs
backend/test_resources/: invalid_secrets.toml  test_secrets.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  access_token.ts  index.tsx  setupProxy.js
frontend/src/components/: AddFoodForm.tsx  AdminApp.tsx  DayFoodsView.module.css  DayFoodsView.tsx  ErrorView.tsx  FoodList.tsx  FoodView.module.css  FoodView.tsx  HomePage.tsx  Loading.tsx  MonthFoodsView.module.css  MonthFoodsView.tsx  MyFoods.tsx  PageNotFound.tsx  RegularUserApp.tsx  UseApiView.tsx  YearFoodsView.tsx
frontend/src/hooks/: use-api.ts  use-input.ts
frontend/src/messages/: Food.ts
frontend/src/model/: Foods.ts  GroupedFood.ts  UserInfo.ts
frontend/src/store/: index.ts  (+2 more)
(+18 files in other folders)
