[package]
name = "diet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
hyper = { version = "0.14.17", features = ["full"] }
http = "0.2.6"
tokio = { version = "1.17.0", features = ["full"] }
log = "0.4.16"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
clap = "3.1.6"
toml = "0.5.8"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.2"
crypto-common = "*"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
serial_test = "0.6.0"
env_logger = "0.9.0"
